--- a/BlazorWasmSyncStart/wwwroot/index.html
+++ b/BlazorWasmSyncStart/wwwroot/index.html
@@ -13,6 +13,8 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
     <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
