--- a/BlazorWasmSyncStart/wwwroot/index.html
+++ b/BlazorWasmSyncStart/wwwroot/index.html
@@ -19,7 +19,25 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <!--<div id="app">Loading...</div>-->
+
+    <div id="app">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand">PWA</a>
+            </div>
+        </div>
+        <div class="container body-content">
+            <p>
+                <h1 class="center">Loading...</h1>
+            </p>
+            <hr />
+            <footer>
+                <p>&copy; WebAssembly Start</p>
+            </footer>
+        </div>
+    </div>
+
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
