--- a/BlazorWasmSyncStart/wwwroot/index.html
+++ b/BlazorWasmSyncStart/wwwroot/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>BlazorWasmSyncStart</title>
     <base href="/" />
-    <link id="theme" href="css/bootstrap/bootstrap-flatly.min.css" rel="stylesheet" />
+    <link id="theme" href="css/bootstrap/bootstrap-superhero.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="BlazorWasmSyncStart.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
@@ -20,24 +20,17 @@
 
 <body>
     <!--<div id="app">Loading...</div>-->
-
     <div id="app">
-        <!--<div class="container">-->
-            <!--<div class="navbar-header">
-                <a class="navbar-brand">PWA</a>
-            </div>-->
-        <!--</div>-->
         <div class="container body-content">
             <p>
                 <h1 class="center">Loading...</h1>
             </p>
             <hr />
             <footer>
-                <p>&copy; Application Start</p>
+                <p>&copy; Application start</p>
             </footer>
         </div>
     </div>
-
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
