--- a/BlazorWasmSyncStart/wwwroot/index.html
+++ b/BlazorWasmSyncStart/wwwroot/index.html
@@ -9,12 +9,11 @@
 
     <!--stylesheets -->
     <link id="bootstrap-theme" href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link id="light-dark-mode" href="css/app-light.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
 
-    <link id="light-dark-mode" href="css/app-light.css" rel="stylesheet" />
-
     <link href="BlazorWasmSyncStart.styles.css" rel="stylesheet" />
-    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
+    <link href="_content/Syncfusion.Blazor.Themes/material.css" rel="stylesheet" />
     <!--stylesheets-->
 
     <link href="manifest.json" rel="manifest" />
