--- a/BlazorWasmSyncStart/wwwroot/index.html
+++ b/BlazorWasmSyncStart/wwwroot/index.html
@@ -25,15 +25,17 @@
 </head>
 
 <body>
+
     <div id="app">
         <div class="container body-content">
             <p>
-                <h1 class="center">Loading...</h1>
+                <h4 class="center">Loading ...</h4>
             </p>
             <hr />
-            <footer>
-                <p>&copy; Application start</p>
-            </footer>
+        </div>
+        <div class="text-center mt-3">
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"
+                  style="font-size: 16pt;font-weight:900; width: 100px; height: 100px; color: slategray;" />
         </div>
     </div>
 
