--- a/BlazorWasmSyncStart/wwwroot/index.html
+++ b/BlazorWasmSyncStart/wwwroot/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="text-center mt-3">
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"
-                  style="font-size: 16pt;font-weight:900; width: 100px; height: 100px; color: slategray;" />
+                  style="font-size: 16pt;font-weight:900; width: 80px; height: 80px; color: darkslateblue;" />
         </div>
     </div>
 
