--- a/BlazorWasmSyncStart/wwwroot/index.html
+++ b/BlazorWasmSyncStart/wwwroot/index.html
@@ -26,15 +26,18 @@
 
 <body>
     <div id="app">
-        <div class="container body-content">
-            <p>
-                <h4 class="center">Loading ...</h4>
-            </p>
-            <hr />
-        </div>
-        <div class="text-center mt-3">
-            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"
-                  style="font-size: 16pt;font-weight:900; width: 80px; height: 80px; color: darkslateblue;" />
+        <div style="height: 100%; width: 100%; margin: 0; position: fixed; 
+            background-color: #8EC5FC; background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);">
+            <div class="container body-content start">
+                <p>
+                    <h4 class="center" style="color:slateblue;">Loading ...</h4>
+                </p>
+                <hr />
+            </div>
+            <div class="text-center mt-3">
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"
+                      style="font-size: 16pt;font-weight:900; width: 80px; height: 80px; color: darkslateblue;" />
+            </div>
         </div>
     </div>
 
@@ -43,6 +46,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
