--- a/BlazorWasmSyncStart/wwwroot/index.html
+++ b/BlazorWasmSyncStart/wwwroot/index.html
@@ -26,17 +26,19 @@
 
 <body>
     <div id="app">
-        <div style="height: 100%; width: 100%; margin: 0; position: fixed; 
-            background-color: #8EC5FC; background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);">
-            <div class="container body-content start">
-                <p>
-                    <h4 class="center" style="color:slateblue;">Loading ...</h4>
-                </p>
-                <hr />
-            </div>
-            <div class="text-center mt-3">
-                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"
-                      style="font-size: 16pt;font-weight:900; width: 80px; height: 80px; color: darkslateblue;" />
+        <div style="height: 100%; width: 100%; margin: 0; position: fixed;
+            background-color: #8EC5FC; background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); ">
+        <div style="display:flex;justify-content:center;">
+                <div class="container body-content start">
+                    <p>
+                        <h4 style="color:slateblue; text-align:center">Loading ...</h4>
+                    </p>
+                    <hr />
+                </div>
+                <div style="position:absolute; top:50%;">
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"
+                          style="font-size: 16pt;font-weight:900; width: 180px; height: 180px; color: crimson; text-align:center" />
+                </div>
             </div>
         </div>
     </div>
