--- a/BlazorWasmSyncStart/wwwroot/index.html
+++ b/BlazorWasmSyncStart/wwwroot/index.html
@@ -31,13 +31,13 @@
         <div style="display:flex;justify-content:center;">
                 <div class="container body-content start">
                     <p>
-                        <h4 style="color:slateblue; text-align:center">Loading ...</h4>
+                        <h4 style="color:darkslateblue; text-align:center">Loading ...</h4>
                     </p>
                     <hr />
                 </div>
                 <div style="position:absolute; top:50%;">
                     <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"
-                          style="font-size: 16pt;font-weight:900; width: 180px; height: 180px; color: crimson; text-align:center" />
+                          style="font-size: 26pt; font-weight: 900; width: 120px; height: 120px; color: darkslateblue; text-align: center" />
                 </div>
             </div>
         </div>
