--- a/BlazorWasmSyncStart/wwwroot/index.html
+++ b/BlazorWasmSyncStart/wwwroot/index.html
@@ -16,12 +16,17 @@
     <link href="_content/Syncfusion.Blazor.Themes/material.css" rel="stylesheet" />
     <!--stylesheets-->
 
+    <!--manifest-->
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <!--manifest-->
 
+    <!--scripts-->
     <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
+    <!--scripts-->
+
 </head>
 
 <body>
